aps finalizada com utilizacao da vm + testes da linguagem + apresentacao

--- a/src/Makefile
+++ b/src/Makefile
@@ -3,6 +3,11 @@ LEX     = flex
 YACC    = bison
 CFLAGS  = -O2 -Wall
 
+all: esteira
+
+esteira: parser.tab.c lexer.c driver.o
+	$(CC) $(CFLAGS) parser.tab.c lexer.c driver.o -lfl -o $@
+
 parser.tab.c parser.tab.h: parser.y
 	$(YACC) -d parser.y
 
@@ -12,10 +17,5 @@ lexer.c: lexer.l parser.tab.h
 driver.o: driver.c parser.tab.h
 	$(CC) $(CFLAGS) -c driver.c -o driver.o
 
-../esteira: parser.tab.c lexer.c driver.o
-	$(CC) $(CFLAGS) parser.tab.c lexer.c driver.o -lfl -o $@
-
-all: ../esteira
-
 clean:
-	rm -f parser.c parser.tab.c parser.tab.h lexer.c driver.o ../esteira
+	rm -f parser.c parser.tab.c parser.tab.h lexer.c driver.o esteira
